<resources>
    <string name="app_name">BookTrackingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Continue</string>
    <string name="go_back">Go Back</string>
    <string name="add_book">Add Book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="fill_in_the_details_of_the_book">Fill in the details of the book</string>
    <string name="titleText">Title:</string>
    <string name="authorText">Author:</string>
    <string name="read_the_book">Read the book?</string>
    <string name="series_name">Series Name</string>
    <string name="read">Read</string>
    <string name="series">Series</string>
    <string name="edit_book">Edit Book</string>
    <string name="delete_book">delete book</string>
</resources>