<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment"
    android:background="@drawable/title_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linear"
            android:background="@drawable/bookcase_bg">

            <ImageView
                android:id="@+id/backArrowUpdateBook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/back_arrow"
                />

            <!-- TextView for title of page -->
            <TextView
                android:id="@+id/addBookTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/fill_in_the_details_of_the_book"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal|top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <!-- TextView for title input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/bookTitleTextView"
            android:text="@string/titleText"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editBookTextView"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- InputField for title input -->
        <EditText
            android:id="@+id/editBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookTitleTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- TextView for author input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/bookAuthorTextView"
            android:text="@string/authorText"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editBookTitle"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- InputField for author -->
        <EditText
            android:id="@+id/editBookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/author"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookAuthorTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Read checkbox -->
        <CheckBox
            android:id="@+id/editReadCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_the_book"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editBookAuthor"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Series checkbox -->
        <CheckBox
            android:id="@+id/editSeriesCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Is this a series?"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editReadCheckbox"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- TextView for series input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/editSeriesTextView"
            android:text="@string/series_name"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSeriesCheckbox"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- InputField for series -->
        <EditText
            android:id="@+id/editBookSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/series_name"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSeriesTextView"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_book"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center_horizontal|bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>